--- a/package.json
+++ b/package.json
@@ -17,16 +17,29 @@
         "@types/react-router": "^5.1.3",
         "@types/react-router-dom": "^5.1.3",
         "@types/styled-components": "^5.1.26",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.40.0",
         "babel-loader": "^8.2.5",
         "babel-preset-react": "^6.24.1",
+        "eslint": "^8.0.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.31.10",
         "html-webpack-plugin": "^5.5.0",
         "ts-loader": "^9.4.1",
-        "typescript": "^4.6.0",
+        "typescript": "*",
         "typescript-plugin-styled-components": "^2.0.0",
         "webpack": "5.22.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "~4.10.0",
-        "webpack-dev-server": "^4.11.1"
+        "webpack-dev-server": "^4.11.1",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.7.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react-hooks": "^4.6.0"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.2.3",
